# fairspec-extension

./: .releaserc.json  @configure.ts  @generate.ts  CONTRIBUTING.md  LICENSE.md  README.md  biome.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: general.yaml
python/: pyproject.toml
python/fairspec_extension/: __init__.py
python/fairspec_extension/models/: __init__.py  dataset.py  table1.py  table2.py
typescript/: README.md  index.ts  package.json
typescript/models/: dataset.ts  index.ts  table1.ts  table2.ts
website/: astro.config.ts  content.config.ts  package.json
website/assets/: styles.css
website/components/builtin/: SocialIcons.astro
website/content/docs/: index.mdx
website/content/docs/overview/: examples.md  format.md  software.md
website/content/docs/specification/: metadata.md
website/content/docs/specification/data/: table1.md  table2.md
website/profiles/: dataset.json
website/public/profiles/0.1.0/: dataset.json
website/public/profiles/0.1.1/: dataset.json
website/public/profiles/0.2.1/: dataset.json
website/public/profiles/0.2.2/: dataset.json
website/public/profiles/0.2.3/: dataset.json
website/public/profiles/0.3.0/: dataset.json
website/public/profiles/0.4.0/: dataset.json
website/public/schemas/0.1.0/: table2.json
website/public/schemas/0.4.0/: table2.json
website/schemas/: table1.json  table2.json
