[project]
name = "fairspec-extension"
version = "0.2.2"
description = "Fairspec Extension is a Git repository template for rapid Fairspec extension development"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = ["pydantic>=2.12", "typing-extensions>=4.15"]
slug = "fairspec-extension"
title = "Fairspec Extension"

[[project.authors]]
name = "Evgeny Karev"

[project.urls]
homepage = "https://fairspec.github.io/fairspec-extension"
repository = "https://github.com/fairspec/fairspec-extension"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
